--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -48,9 +48,10 @@
   </div>
   <div class="result" *ngIf="mode=='result'">
     <h4 class="alert alert-info text-center">Survey Submitted. Thanks for your valuable feedback !!</h4>
+    <h6 class="alert alert-info text-center">Number of Submissions in this session : {{count}} </h6>
   </div>
   <hr />
   <div *ngIf="mode!='result'">
-    <button class="btn btn-primary" (click)="onSubmit();">Submit Survey</button>
+    <button  class="btn btn-primary" (click)="onSubmit(); clickCount();">Submit Survey</button>
   </div>
 </div>
